Edited wiki page References through web user interface.

--- a/wiki/References.wiki
+++ b/wiki/References.wiki
@@ -1,4 +1,4 @@
-#summary Reference documentation used for project.
+#summary Reference documentation and libraries used for project.
 
 = References =
 
