Edited wiki page Report through web user interface.

--- a/wiki/Report.wiki
+++ b/wiki/Report.wiki
@@ -35,3 +35,5 @@ TODO
 ==Result==
 
 TODO (Discuss final project outcome, show pictures, video, etc)
+
+<wiki:video url="http://www.youtube.com/watch?v=tSXddswz4NI" />
