--- a/wiki/Report.wiki
+++ b/wiki/Report.wiki
@@ -37,3 +37,4 @@ TODO
 TODO (Discuss final project outcome, show pictures, video, etc)
 
 <wiki:video url="http://www.youtube.com/watch?v=tSXddswz4NI" />
+<wiki:video url="http://www.youtube.com/watch?v=H7dFf2XpHOQ" />
