--- a/wiki/Report.wiki
+++ b/wiki/Report.wiki
@@ -30,7 +30,7 @@ The input of the Beeping Paddles system was handled by a polling module which in
 
 https://photos-1.dropbox.com/i/l/S46usJZb4fIQlqoBIhr22V64ECxtZRX-lkm_mC6veKg/15814148/1323306000/dcd80ae/SNES-Data.jpg
 
-This interface was very intuitive for game play and leaves many doors open for further improvement of the game.
+This interface was very intuitive for game play and leaves many doors open for further improvement of the game. The basic structure of the finite state machine was adapted from the following [http://web.mit.edu/6.111/www/s2004/PROJECTS/2/nes.htm link].
 
 ===Video Module===
 
