--- a/wiki/Report.wiki
+++ b/wiki/Report.wiki
@@ -22,7 +22,9 @@ TODO
 
 ===Audio Module===
 
-TODO
+The audio module for Beeping Paddles was developed around John Loomis’ third audio project, implementing a sine lookup table for varying frequencies of output at constant amplitude. The module produces tones of specific frequency for set times determined by registers in game logic. This module requires a valid signal to initiate the tone output and is triggered by several cases of ball collision.
+John Loomis’ base code can be found [http://johnloomis.org/digitallab/audio/audio3/audio3.html here].
+
 
 ===Input Module===
 
